--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@ body {
     color: white;
 }
 
-h2 {
+h1 {
     font-family: Acme;
+    font-size: 175px;
+}
+
+p {
+    font-family: Monospace;
+    font-size: 38px;
+    margin: 20px;
+    padding: 20px;
 }
