--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 h1 {
     font-family: Acme;
     font-size: 175px;
+    text-align: center;
     color: #fff;
     text-shadow:
         0 0 5px #fff;
@@ -22,6 +23,7 @@ h1 {
 p {
     font-family: Monospace;
     font-size: 38px;
+    text-align: center;
     margin: 20px;
     padding: 20px;
 }
