--- a/style.css
+++ b/style.css
@@ -1,17 +1,38 @@
+@font-face {
+    font-family: 'Kalam', cursive;
+    src: url("https://bitbucket.org/kennethjensen/webfonts/raw/fc13c1cb430a0e9462da56fe3f421ff7af72db71/neontubes/neontubes-webfont.eot");
+    src: url("https://bitbucket.org/kennethjensen/webfonts/raw/fc13c1cb430a0e9462da56fe3f421ff7af72db71/neontubes/neontubes-webfont.eot?#iefix") format("embedded-opentype"), url("https://bitbucket.org/kennethjensen/webfonts/raw/fc13c1cb430a0e9462da56fe3f421ff7af72db71/neontubes/neontubes-webfont.woff2") format("woff2"), url("https://bitbucket.org/kennethjensen/webfonts/raw/fc13c1cb430a0e9462da56fe3f421ff7af72db71/neontubes/neontubes-webfont.woff") format("woff"), url("https://bitbucket.org/kennethjensen/webfonts/raw/fc13c1cb430a0e9462da56fe3f421ff7af72db71/neontubes/neontubes-webfont.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     background-color: #090A0A;
     color: white;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-.heading {
-    font-family: Acme;
-    font-size: 175px;
+.main {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 30%
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    width: 50vw;
+    height: auto;
+    font-size: 16vw;
     text-align: center;
-    font-weight: 200;
+    white-space: nowrap;
+}
+
+.main span {
+    font-family: 'Kalam', cursive;
     color: #ffd9e2;
     text-shadow: 0 0 0 transparent, 0 0 10px #ff003c, 0 0 20px rgba(255, 0, 60, 0.5), 0 0 40px #ff003c, 0 0 100px #ff003c, 0 0 200px #ff003c, 0 0 300 px #ff003c, 0 0 500px #ff003c;
-    -webkit-animation: buzz 0.01s infinite alternate;
-            animation: buzz 0.01s infinite alternate;
+    -webkit-animation: buzz 0.1s infinite alternate;
+            animation: buzz 0.1s infinite alternate;
 }
 
 @-webkitkeyframes buzz {
@@ -69,3 +90,7 @@ p {
     margin: 20px;
     padding: 20px;
 }
+
+
+
+
