--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ p {
     padding: 20px;
 }
 
-.name-logo {
+.logo {
   text-align: center;
   width: 65%;
   height: 250px;
@@ -31,15 +31,15 @@ p {
    user-select: none;
 }
 
-.name-logo b{
+.logo b{
   font: 400 19vh "Vibur";
   color: #fee;
   text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000;
 }
-.name-logo b span{
+.logo b span{
   animation: blink linear infinite 2s;
 }
-.name-logo b span:nth-of-type(2){
+.logo b span:nth-of-type(2){
   animation: blink linear infinite 3s;
 }
 @keyframes blink {
