--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@ body {
     background: black;
 }
 
+.h1 {
+  font-family: 'Kalam', cursive;
+  font-size: 100px;
+  text-align: center;
+  color: pink;
+}
+
 p {
     font-family: Monospace;
     font-size: 38px;
@@ -12,10 +19,6 @@ p {
 }
 
 .logo {
-  font-family: 'Kalam', cursive;
-  font-size: 100px;
-  text-align: center;
-  color: pink;
   text-align: center;
   width: 65%;
   height: 250px;
