--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p {
   width: 65%;
   height: 250px;
   margin: auto;
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
   right: 0;
