--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 .h1 {
   font-family: 'Kalam', cursive;
-  font-size: clamp(200vh, 80vw, 400vh);
+  font-size: 400vh;
   text-align: center;
   color: pink;
 }
